updating our details again

--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
     <section class="details">
       <h1>Introduction</h1>
       <p>I am a genuis developer.</p>
-      <h1>Where I'm From</h1>
+      <h1>Toronto, Ontario</h1>
       <p>Details here...</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Fitness</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Full Stack Developer</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Toronto, Ontario</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p> My passion is to become the best developer in Toronto</p>
     </section>
 
     <footer id="footer">
